--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>Built with C++ (Doubly-Linked List) + SQLite + HTML/CSS/JS</p>
+            <div class="developer-credit">
+                <span class="dev-label">Developed By</span>
+                <h2 class="dev-name">ARSLAN SOLEHRIA</h2>
+            </div>
             <p class="footer-note">Final Year Project - Data Structures</p>
         </footer>
     </div>
